--- a/react/src/index.css
+++ b/react/src/index.css
@@ -1,3 +1,11 @@
-body {
-  margin: 0;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&display=swap');
+
+:root {
+  --text-colour: #5E3228;
+  --background-color: #D9C1AB;
+}
+
+* {
+  font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
 }
