--- a/react/src/assets/css/footer.css
+++ b/react/src/assets/css/footer.css
@@ -11,12 +11,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    margin-top: 120px;
+    box-shadow: 0px -10px 25px rgba(133, 133, 133, 0.25);
 }
 
 #footer .copyright-text {
     font-weight: 400;
     font-size: 14px;
     line-height: 21px;
+    text-align: center;
 }
 
 .footer-wrap {
