--- a/react/src/index.css
+++ b/react/src/index.css
@@ -11,10 +11,6 @@
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-}
-
 h1,
 h2,
 h4 {
@@ -23,4 +19,10 @@ h4 {
 
 span {
   color: var(--text-colour);
+}
+
+html,
+body {
+  height: 100%;
+  margin: 0;
 }
