--- a/react/src/index.css
+++ b/react/src/index.css
@@ -26,3 +26,19 @@ body {
   height: 100%;
   margin: 0;
 }
+
+.loader {
+  position: fixed;
+  z-index: 999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40vh 0;
+}
