--- a/react/src/assets/css/homepage.css
+++ b/react/src/assets/css/homepage.css
@@ -3,7 +3,7 @@
     font-size: 40px;
     line-height: 49px;
     text-transform: uppercase;
-    margin-top: 20px;
+    padding-top: 40px;
 }
 
 .news-el-title {
@@ -23,6 +23,7 @@
     max-width: 640px;
     display: flex;
     flex-direction: column;
+    margin: auto;
 }
 
 .news-date {
@@ -30,6 +31,7 @@
     font-size: 18px;
     line-height: 22px;
     padding-left: 18px;
+    min-width: 120px;
 }
 
 .news-read-more {
@@ -59,6 +61,7 @@
     font-weight: 700;
     font-size: 20px;
     line-height: 24px;
+    padding-top: 40px;
 }
 
 .links-layout a {
